Fixed issue with arrow being off-center

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -133,7 +133,7 @@ h4
   display: inline-block
   position: absolute
   bottom: 0
-  transform: translate(-50%, -50%)
+  transform: translate(-60%, -50%)
 
 #portfolio
   margin-top: 50px
